# python-project-lvl3

./: .gitignore  .pre-commit-config.yaml  .prettierignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pre-commit.yml  pytest.yml
page_loader/: __init__.py  comm.py  core.py  file_operations.py  logging.py
page_loader/scripts/: page_loader.py
tests/: helpers.py  paths.py  test_comm.py  test_file_operations.py
tests/comm/: test_comm.py
tests/core/: test_core.py
tests/file_operations/: test_file_operations.py
tests/file_operations/resources/: updated_page_content_with_assets.html  updated_page_with_script_and_link_tags.html
tests/resources/: page_content_with_assets.html  page_with_script_and_link_tags.html  site-com-blog-about.html  updated-site-com-blog-about.html
tests/scripts/: test_page_loader.py
