[tool.poetry]
name = "hexlet-code"
version = "0.5.0"
description = "A small library to download and store the content of the web pages"
authors = ["Savin Timur <mr.svntmr@gmail.com>"]
repository = 'https://github.com/svntmr/python-project-lvl3'

packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.27.1"
beautifulsoup4 = "4.10.0"

[tool.poetry.dev-dependencies]
pre-commit = "2.17.0"
black = "22.3.0"
mypy = "v0.931"
flake8 = "4.0.1"
pytest = "7.0.0"
isort = "5.10.1"
pytest-cov = "3.0.0"
types-requests = "2.27.11"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
